--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+#temp{
+  font: 182% "League Gothic", Helvetica, Arial, sans-serif;
+}
+
+#ps{
+  font: 182% "League Gothic", Helvetica, Arial, sans-serif;
+}
+
 .upButton{
 -moz-border-radius:6px;
 -webkit-border-radius:6px;
@@ -9,7 +17,7 @@ width: 224px;
 display: block;
 color: #434953;
 text-transform: uppercase;
-font: 182% "League Gothic", Helvetica, Arial, sans-serif;
+font: 100% "League Gothic", Helvetica, Arial, sans-serif;
 text-decoration:none;
 text-align:center;
 }
@@ -34,7 +42,7 @@ width: 224px;
 display: block;
 color: #434953;
 text-transform: uppercase;
-font: 182% "League Gothic", Helvetica, Arial, sans-serif;
+font: 100% "League Gothic", Helvetica, Arial, sans-serif;
 text-decoration:none;
 text-align:center;
 }
@@ -60,7 +68,7 @@ text-align:center;
   display: block;
   color: #434953;
   text-transform: uppercase;
-  font: 182% "League Gothic", Helvetica, Arial, sans-serif;
+  font: 100% "League Gothic", Helvetica, Arial, sans-serif;
   text-decoration:none;
   text-align:center;
 }
@@ -72,10 +80,4 @@ color: #303030;
 -moz-box-shadow: 0px 0px 5px rgba(0,0,0,0.10) inset;
 box-shadow: 0px 0px 5px rgba(0,0,0,0.10) inset;
 background-color: #007A00;
-}
-
-
-#temp{
-  font: 182% "League Gothic", Helvetica, Arial, sans-serif;
-
 }
