--- a/style.css
+++ b/style.css
@@ -11,6 +11,19 @@
   background-color: #CCC;
   display: inline-block;
 }
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}
 #ps {
   font: 182% "League Gothic", Helvetica, Arial, sans-serif;
   text-align: center;
